# tia

./: .env.example  .gitignore  AGENTS.md  README-zh.md  README.md  main.py  pyproject.toml  streamlit_app.py  架构设计题.md
.streamlit/: config.toml
agent/: __init__.py  runner.py
api/: __init__.py  app.py
docs/: context.md  loops.md  session.md  testing-and-error-handling.md  tools.md
frontend/: __init__.py  app.py  client.py  sessions.py
memory/: __init__.py  context.py  sqlite.py  store.py
runtime/: __init__.py  builtin_tools.py  contracts.py  errors.py  events.py  litellm_client.py  tools.py
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_frontend_app.py  test_frontend_client.py  test_frontend_sessions.py  test_litellm_client.py  test_runner.py  test_sqlite.py  test_tools.py
tests/e2e/: __init__.py  app.py  test_browser_flow.py
tests/env/: test_dependencies.py  test_openrouter_smoke.py
tests/environment/: __init__.py  test_dependencies.py
tests/integration/: test_api.py  test_frontend_app.py  test_runner.py  test_sqlite.py
tests/provider/: __init__.py  test_openrouter.py
tests/real/: __init__.py  test_openrouter.py
tests/unit/: test_frontend_client.py  test_frontend_sessions.py  test_litellm_client.py  test_tools.py
